# ATR_MultiThreading-

./: CMakeLists.txt  README.md  build.bat
analise/: CMakeLists.txt  analise.cpp
captura/: CMakeLists.txt  captura.cpp
common/: CMakeLists.txt
common/include/: globals.hpp  messages.hpp  shared_layout.hpp  utils.hpp
common/src/: globals.cpp  messages.cpp  utils.cpp
exibicao/: CMakeLists.txt  exibicao.cpp
io_entrada/: CMakeLists.txt  io_entrada.cpp
launcher/: CMakeLists.txt  launcher.cpp
teclado/: CMakeLists.txt  teclado.cpp
